<resources>

    <string name="app_name">Firebase Teste</string>
    <string name="dialog_wait">Aguarde…</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <!-- NAVIGATION -->
    <string name="navigation_home">Página Inicial</string>
    <string name="navigation_tabbed">Tabelas</string>
    <string name="navigation_profile">Perfil</string>
    <string name="navigation_logout">Sair</string>

    <!-- MENU -->
    <string name="menu_item">menu</string>
    <string name="menu_register_register">CADASTRAR</string>
    <string name="menu_profile_save">SALVAR</string>

    <!-- REGISTER ACTIVITY -->
    <string name="title_activity_register">Cadastro</string>
    <string name="register_name">Seu nome:</string>
    <string name="register_email">Seu e-mail de login:</string>
    <string name="register_email_confirm">Confirme seu e-mail:</string>
    <string name="register_password">Sua senha de login:</string>
    <string name="register_password_confirm">Confirme sua senha:</string>

    <!-- LOGIN ACTIVITY -->
    <string name="title_activity_login">Login</string>
    <string name="login_email">E-mail:</string>
    <string name="login_password">Senha:</string>
    <string name="login_action_login">entar</string>
    <string name="login_action_register"><u>Registar-me</u></string>
    <string name="login_forgot_password"><u>Esqueci minha senha</u></string>

    <!-- FORGOT PASSWORD ACTIVITY -->
    <string name="title_activity_forgot_password">Esqueci minha senha</string>
    <string name="forgot_email">Se e-mail de acesso:</string>
    <string name="forgot_action">redefinir senha</string>

    <!-- PREFERENCES ACTIVITY -->
    <string name="title_activity_preferences">Configurações</string>
    <string name="pref_title_ringtone">Toque de notificação</string>
    <string name="pref_ringtone_silent">Silêncioso</string>
    <string name="pref_title_notifications">Notificações</string>
    <string name="summary_choose_ringtone">Escolha o toque de notificação</string>
    <string name="pref_header_about">Sobre</string>
    <string name="title_send_feedback">Enviar comentário</string>
    <string name="title_version">Versão</string>
    <string name="title_new_notification_sound">Notificar novas mensagens</string>
    <string name="title_vibrate">Vibração</string>
    <string name="summary_vibrate">Vibrar ao receber notificação</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_support">Tem alguma dúvida? Estamos felizes em ajudar!</string>
    <string name="choose_email_client">Escolha um serviço de e-mail</string>
    <string name="about_developer">Página do desenvolvedor</string>
    <string name="about_developer_url">https://guilhermefgl.wordpress.com/</string>

    <!-- TRANSITION ACTIVITY -->
    <string name="transition_image_description">image transition</string>

    <!-- PROFILE FRAGMENT -->
    <string name="profile_update_pic">Alterar seu avatar</string>
    <string name="profile_update_name">Alterar seu nome</string>
    <string name="profile_update_password">Alterar sua senha *</string>
    <string name="profile_update_label">* Apenas preencha se for alterar</string>

    <!-- TABBED FRAGMENT -->
    <string name="tabbed_navigation_description">navigation</string>
    <string name="tabbed_list_title">Lorem ipsum</string>
    <string name="tabbed_list_body">Lorem ipsum dolor sit amet, audiam omittam at duo. Vim ignota labitur corrumpit cu, vel ne audire regione oportere</string>
    <string name="tabbed_view_1">Tabbed View 1</string>
    <string name="tabbed_view_2">Tabbed View 2</string>
    <string name="tabbed_view_3">Tabbed View 3</string>

    <!-- DIALOG MESSAGES -->
    <string name="dialog_logout">Tem certeza que deseja sair?</string>
    <string name="dialog_aks_password_title">Credênciais</string>
    <string name="dialog_aks_password_label">Senha de acesso:</string>
    <string name="dialog_aks_password_yes">ENTRAR</string>
    <string name="dialog_aks_password_no">CANCELAR</string>
    <string name="dialog_pick_image_intent">Escolha uma imagem</string>

    <!-- TOAST MESSAGES -->
    <string name="error_empty_required">Campo obrigatório</string>
    <string name="success_register">Usuário criado com sucesso</string>
    <string name="success_forgot">E-mail para redefinir senha enviado</string>
    <string name="success_profile_update">Usuário atualizado com sucesso</string>
    <string name="error_login">Login inválido</string>
    <string name="error_login_failed">Falha ao realizar login</string>
    <string name="error_register_confirm_email">Confirme seu e-mail</string>
    <string name="error_register_confirm_password">Confirme sua senha</string>
    <string name="error_register_weak_password">Digite uma senha mais forte</string>
    <string name="error_register_invalid_email">E-mail inválido</string>
    <string name="error_register_duplicate_email">Esse e-mail já foi cadastrado</string>
    <string name="error_register_generic">Não foi possível realizar cadastro</string>
    <string name="error_update_generic">Não foi possível atualizar cadastro</string>
    <string name="error_forgot">E-mail não encontrado</string>
    <string name="navigation_profile_pic">avatar do usuário</string>

    <!-- SERVICES -->
    <string name="notification_channel_message_title">Mensagem do sistema</string>
    <string name="notification_channel_data_title">Mensagem com dados</string>
    <string name="email_subject_contact">FireBaseTest - Contato</string>
    <string name="email_body_contact">"\n\n-----------------------------\nPor favor, não remover essas informações:\n Device OS: Android \n Device OS version: %1$s\n App Version: %2$s\n Device Brand: %3$s\n Device Model: %4$s\n Device Manufacturer: %5$s"</string>

    <!-- PINS -->
    <string name="pin_preferences_shot_label">Configuraçoes</string>
    <string name="pin_preferences_long_label">Abrir minhas configurações</string>

    <!-- TRANSITIONS -->
    <string name="transition_list_item_title">transition_list_item_title</string>
    <string name="transition_list_item_image">transition_list_item_image</string>
    <string name="transition_list_item_body">transition_list_item_body</string>

    <!-- KEYS -->
    <string name="key_facebook_app_id">1546383518720699</string>
    <string name="key_fb_login_protocol_scheme">fb1546383518720699</string>
    <string name="key_crash_report">aa336eaed17d098bca0d6e0f363901c5d1afdf48</string>


</resources>
