<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guilherme.firebasedatabse.activitys.TransitionActivity">

    <ImageView
        android:id="@+id/transition_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/img_tab_background"
        android:contentDescription="@string/transition_image_description"
        android:transitionName="@string/transition_list_item_image" />

    <TextView
        android:id="@+id/transition_title"
        android:layout_below="@+id/transition_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/tabbed_list_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:transitionName="@string/transition_list_item_title" />

    <TextView
        android:id="@+id/transition_text"
        android:layout_below="@+id/transition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/tabbed_list_body" />

</RelativeLayout>
