<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guilherme.firebasedatabse.fragments.ProfileFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/update_pic"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginBottom="8dp"
                android:drawingCacheQuality="high"
                android:clickable="true"
                android:background="@drawable/ic_avatar" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginBottom="-9dp"
                android:layout_marginRight="-1dp"
                android:layout_marginEnd="-1dp"
                android:rotation="135"
                android:src="@drawable/shape_pic_triangle"
                android:layout_alignBottom="@+id/update_pic"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/profile_update_pic"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_email" />

        <TextView
            android:id="@+id/update_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:lines="1"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_update_name" />

        <EditText
            android:id="@+id/update_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:lines="1"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_update_password" />

        <EditText
            android:id="@+id/update_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_password_confirm" />

        <EditText
            android:id="@+id/update_password_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_update_label"
            android:textColor="@color/text_color_primary_label"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/update_action_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_action_save" />

</LinearLayout>

