<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true"
    android:gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_image"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/img_tab_background"
        android:contentDescription="@string/transition_image_description"
        android:transitionName="@string/transition_list_item_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@android:id/text1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_list_item_title"/>

        <TextView
            android:id="@android:id/text2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
