<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guilherme.firebasedatabse.activitys.RegisterActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/register_pic"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginBottom="8dp"
                android:drawingCacheQuality="high"
                android:clickable="true"
                android:background="@drawable/ic_avatar" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginBottom="-9dp"
                android:layout_marginRight="-1dp"
                android:layout_marginEnd="-1dp"
                android:rotation="135"
                android:src="@drawable/shape_pic_triangle"
                android:layout_alignBottom="@+id/register_pic"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/profile_update_pic"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_name"/>

        <EditText
            android:id="@+id/register_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:lines="1"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_email"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_email_confirm"/>

        <EditText
            android:id="@+id/register_email_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_password"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_password_confirm"/>

        <EditText
            android:id="@+id/register_password_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/register_action_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_action_register" />

</LinearLayout>
