<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="240dp"
    android:paddingTop="20dp"
    android:paddingBottom="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textSize="14sp"
        android:textColor="@color/text_color_primary"
        android:text="@string/dialog_aks_password_label"/>

    <EditText
        android:id="@+id/dialog_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:inputType="textPassword"
        android:lines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/dialog_negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FlatButton"
            android:text="@string/dialog_aks_password_no"/>

        <Button
            android:id="@+id/dialog_positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FlatButton"
            android:text="@string/dialog_aks_password_yes"/>

    </LinearLayout>

</LinearLayout>